[package]
name = "rspack-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rspack_plugin_schemes= { path = "../rspack/crates/rspack_plugin_schemes" }
rspack_ids= { path = "../rspack/crates/rspack_ids" }
rspack_plugin_javascript= { path = "../rspack/crates/rspack_plugin_javascript" }
rspack_core = { path = "../rspack/crates/rspack_core" }
rspack_paths = { path = "../rspack/crates/rspack_paths" }
rspack_plugin_entry = { path = "../rspack/crates/rspack_plugin_entry" }
rspack_fs = { path = "../rspack/crates/rspack_fs" }
serde_json = "1.0.128"
tokio = {features = ["full"], version = "1.38.0"}
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.6.0"
pretty_env_logger = "0.5.0"
url = "2.5.2"
futures = "0.3.30"
async-trait = "0.1.80"
anyhow = "1.0.86"
reqwest = { version = "0.12.7" } 

[features]
async = []
